chg: user: Sphinx stuck in a "content" class on an ancestor, triggering a layout issue in Bulma.

--- a/kaybee_bulma/scss/_filteredlisting.scss
+++ b/kaybee_bulma/scss/_filteredlisting.scss
@@ -7,8 +7,15 @@
     }
   }
 
-  .kbb-fl-author span {
-    padding-left: 0.4em;
+  .kbb-fl-author {
+    figure {
+      // Sphinx sticks a "content" class in a parent, triggering
+      // a Bulma margin everywhere
+      margin: 0;
+    }
+    span {
+      padding-left: 0.4em;
+    }
   }
 
   .kbb-pagination {
